field-solver usage

--- a/Astrometry/Dockerfile
+++ b/Astrometry/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:24.04
 
 ARG EXTRA_PACKAGES=""
 ARG BUILD_JOBS="4"
-ARG BUILD_PACKAGES="gcc"
+ARG BUILD_PACKAGES=""
 ARG BASE_PACKAGES="astrometry.net astrometry-data-tycho2"
 
 # get our base stuff out the way
@@ -11,7 +11,7 @@ RUN set -x \
     && apt install -y $BUILD_PACKAGES $BASE_PACKAGES $EXTRA_PACKAGES 
 
 # lets clean some stuff
-RUN apt purge -y $BUILD_PACKAGES
+#RUN apt purge -y $BUILD_PACKAGES
 
 # 
 # VOLUME [ ]
